# 3D-computer-vision-assignments

./: README.md
Assignment_1_-_Feature extraction and Matching/: group_id.txt
Assignment_1_-_Feature extraction and Matching/task1a/: harris.py  visualization.ipynb
Assignment_1_-_Feature extraction and Matching/task1b/: blob.py  visualization.ipynb
Assignment_1_-_Feature extraction and Matching/task2a/: match.py  visualization.ipynb
Assignment_1_-_Feature extraction and Matching/task2b/: rbrief.py  visualization.ipynb
Assignment_1_-_Feature extraction and Matching/task2c/: rhog.py  visualization.ipynb
Assignment_1_-_Feature extraction and Matching/task3/: draw_keypoint.py  match.py
Assignment_1_-_Feature extraction and Matching/utils/: draw_keypoint.py
Assignment_2_-_Transforms, Homogeneous Notation and Projection/: requirements.txt  visualization.ipynb
Assignment_3_-_Camera Calibration/: visualization.ipynb
Assignment_3_-_Camera Calibration/images/: image00-keypoints.txt  image02-keypoints.txt  image03-keypoints.txt  image04-keypoints.txt  image05-keypoints.txt  image06-keypoints.txt  image07-keypoints.txt  image08-keypoints.txt  image09-keypoints.txt
Assignment_4_-_SGM/: compile.sh  group_id.txt  requirements.txt
Assignment_4_-_SGM/Assignment4/: CMakeLists.txt  sgm.cpp  task1.ipynb  task2.ipynb
Assignment_5_-_FlowNet/: color.py  eval.py  visualization.ipynb  wrapper.py
Assignment_5_-_FlowNet/models/: FlowNetC.py  FlowNetS.py  blocks.py
Assignment_6_-_COLMAP/: reconstruct.py  requirements.txt  util.py
(+11 files in other folders)
